syntax = "proto3";

package lumen.dns.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "lumen/dns/v1/domain.proto"; // for Record
import "lumen/dns/v1/params.proto";

option go_package = "lumen/x/dns/types";

service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  rpc Register(MsgRegister) returns (MsgRegisterResponse);

  rpc Update(MsgUpdate) returns (MsgUpdateResponse);

  rpc Renew(MsgRenew) returns (MsgRenewResponse);

  rpc Transfer(MsgTransfer) returns (MsgTransferResponse);

  rpc Bid(MsgBid) returns (MsgBidResponse);

  rpc Settle(MsgSettle) returns (MsgSettleResponse);

  rpc CreateDomain(MsgCreateDomain) returns (MsgCreateDomainResponse);
  rpc UpdateDomain(MsgUpdateDomain) returns (MsgUpdateDomainResponse);
  rpc DeleteDomain(MsgDeleteDomain) returns (MsgDeleteDomainResponse);
  rpc CreateAuction(MsgCreateAuction) returns (MsgCreateAuctionResponse);
  rpc UpdateAuction(MsgUpdateAuction) returns (MsgUpdateAuctionResponse);
  rpc DeleteAuction(MsgDeleteAuction) returns (MsgDeleteAuctionResponse);
}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "lumen/x/dns/MsgUpdateParams";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
message MsgUpdateParamsResponse {}

message MsgRegister {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string domain = 2;
  string ext = 3;
  repeated Record records = 6;
  uint64 duration_days = 7;
  reserved 8;
  string owner     = 9;
}
message MsgRegisterResponse {}

message MsgUpdate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string domain = 2;
  string ext = 3;
  repeated Record records = 6;
  uint64 pow_nonce = 7;
}
message MsgUpdateResponse {}

message MsgRenew {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string domain = 2;
  string ext = 3;
  uint64 duration_days = 4;
}
message MsgRenewResponse {}

message MsgTransfer {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string domain = 2;
  string ext = 3;
  string new_owner = 4;
}
message MsgTransferResponse {}

message MsgBid {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string domain = 2;
  string ext = 3;
  string amount = 4;
}
message MsgBidResponse {}


message MsgCreateDomain {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
  string name = 3;
  string owner = 4;
  repeated Record records = 5;
  uint64 expire_at = 6;
}
message MsgCreateDomainResponse {}

message MsgUpdateDomain {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
  string name = 3;
  string owner = 4;
  repeated Record records = 5;
  uint64 expire_at = 6;
  uint64 pow_nonce = 7;
}
message MsgUpdateDomainResponse {}

message MsgDeleteDomain {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
}
message MsgDeleteDomainResponse {}

message MsgCreateAuction {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
  string name = 3;
  uint64 start = 4;
  uint64 end = 5;
  string highest_bid = 6;
  string bidder = 7;
}
message MsgCreateAuctionResponse {}

message MsgUpdateAuction {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
  string name = 3;
  uint64 start = 4;
  uint64 end = 5;
  string highest_bid = 6;
  string bidder = 7;
}
message MsgUpdateAuctionResponse {}

message MsgDeleteAuction {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
}
message MsgDeleteAuctionResponse {}

message MsgSettle {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string domain = 2;
  string ext = 3;
}

message MsgSettleResponse {}
